--- a/cs246.html
+++ b/cs246.html
@@ -128,9 +128,37 @@
                     <div id="collapseTwo" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingTwo">
                         <div class="panel-body">
                             <ul>
-                                <li>Lecture 4 - Done</li>
-                                <li>Lecture 5 - Done</li>
-                                <li>Lecture 6 - Done</li>
+                                <li>
+                                    Lecture 4 - Done
+                                    <ul>
+                                        <li>Input/Output</li>
+                                        <li>I/O Operators in C++</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    Lecture 5 - Done
+                                    <ul>
+                                        <li>Reading String</li>
+                                        <li>Reading TextFile (.txt)</li>
+                                        <li>String</li>
+                                        <li>String Operations</li>
+                                        <li>Default Function Parameters</li>
+                                        <li>Overloading</li>
+                                        <li>Struct (Structure)</li>
+                                        <li>Const (Constant)</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    Lecture 6 - Done
+                                    <ul>
+                                        <li>Parameter Passing</li>
+                                        <li>Pass-by-value</li>
+                                        <li>References</li>
+                                        <li>Dynamic Memory Allocation</li>
+                                        <li>Operator Overloading</li>
+                                        <li>Overloading &lt;&lt; and &gt;&gt;</li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -148,12 +176,65 @@
                     <div id="collapseThree" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
                         <div class="panel-body">
                             <ul>
-                                <li>Lecture  7 - Done</li>
-                                <li>Lecture  8 - Not Done Yet</li>
-                                <li>Lecture  9 - Not Done Yet</li>
-                                <li>Lecture 10 - Not Done Yet</li>
-                                <li>Lecture 11 - Done</li>
-                                <li>Lecture 12 - Done</li>
+                                <li>
+                                    Lecture  7 - Done
+                                    <ul>
+                                        <li>The Preprocessor</li>
+                                        <li>Comment</li>
+                                        <li>Separate Compilation</li>
+                                        <li>Compiling Separately</li>
+                                        <li>#include Guard</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    Lecture  8 - Done
+                                    <ul>
+                                        <li>Classes</li>
+                                        <li>Initialising Objects</li>
+                                        <li>Constructor</li>
+                                        <li>Member Initialisation List (MIL)</li>
+                                        <li>Copy Constructor</li>
+                                        
+                                    </ul>
+                                </li>
+                                <li>
+                                    Lecture  9 - Done
+                                    <ul>
+                                        <li>Copy Constructor</li>
+                                        <li>Destructor</li>
+                                        <li>Copy Assignment Operator</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    Lecture 10 - Done
+                                    <ul>
+                                        <li>Copy and Swap Idiom</li>
+                                        <li>Member/Standalone Function</li>
+                                        <li>Separate Compilation for Classes</li>
+                                        <li>Constant Objects</li>
+                                        <li>Rvalues and Rvalue References</li>
+                                        <li>Move Constructor</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    Lecture 11 - Done
+                                    <ul>
+                                        <li>Move Constructor and Move Assignment Operator</li>
+                                        <li>Copy/Move Elision</li>
+                                        <li>The Rule of 5 (Big 5)</li>
+                                        <li>Arrays of Objects</li>
+                                        <li>Invariants and Encapsulation</li>
+                                        <li>Class</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    Lecture 12 - Done
+                                    <ul>
+                                        <li>Software Engineering Topic: Design Pattern</li>
+                                        <li>Iterator Pattern</li>
+                                        <li>Encapsulation</li>
+                                    </ul>
+                                </li>
                             </ul>
                         </div>
                     </div>
