--- a/cs246_1.html
+++ b/cs246_1.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
         <link rel="stylesheet" href="./note.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
-        <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font/build/web/hack.css'> <!-- HACK!!! -->
+        <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/hack-font/build/web/hack.css'> <!-- HACK!!! -->
         <!-- stylesheet found from w3school. (icon use)-->
         <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -419,6 +419,7 @@
                 <br>
             </div>
         </div>
+        
         <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
         <script src="./bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     </body>
