--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
         <meta charset="utf-8">
         <title>Calvin Li</title>
         <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     
-    <body>
-        
+    <body>  
         <div class="top">
             <h1>Chun Kit (Calvin) Li</h1>
             <h2>Computational Mathematics Student</h2>
@@ -21,7 +20,7 @@
                 <div class="col-md-1"><a href="./doc/NewResume_CKLI.pdf" target="_blank">RÉSUMÉ</a></div>
                 <div class="col-md-1"><a href="./about.html">ABOUT</a></div>
                 <div class="col-md-1"><a href="./projects.html">PROJECTS</a></div>
-                <div class="col-md-1"><a href="./cs246.html">NOTES</a></div>
+                <div class="col-md-1"><a href="./notePage.html">NOTES</a></div>
                 <div class="col-md-4"></div>
             </div>
             <br>
@@ -37,7 +36,6 @@
                     <a href="https://www.instagram.com/vert_arts/" target="_blank;">INSTAGRAM</a></div>
                 <div class="col-md-4"></div>
             </div>
-        </div>  
-
+        </div>
     </body>
 </html>
