--- a/cs246_4.html
+++ b/cs246_4.html
@@ -6,7 +6,9 @@
         <meta charset="utf-8">
         <title>Calvin Li</title>
         <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
-        <link rel="stylesheet" href="./note.css">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/note.css">
+        <link rel="stylesheet" href="./css/cs246Use.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
         <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/hack-font/build/web/hack.css'> <!-- HACK!!! -->
         <!-- stylesheet found from w3school. (icon use)-->
@@ -38,7 +40,9 @@
                         <li class="courseNote">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Course Notes<span class="caret"></span></a>
                             <ul class="dropdown-menu">
+                                <li><a href="./cs230.html">CS 230</a></li>
                                 <li><a href="./cs246.html">CS 246</a></li>
+                                <li><a href="./econ101.html">ECON 101</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -55,34 +59,25 @@
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="5%">
-                        <span class="headerLeft">Instructor:</span>
-                    </td>
+                    <th colspan="5%">Instructor:</th>
                     <td colspan="95%">Brad Lushman</td>
                 </tr>
                 <tr>
-                    <td colspan="5%">
-                        <span class="headerLeft">Office:</span>
-                    </td>
+                    <th colspan="5%">Office:</th>
                     <td colspan="95%">DC3110</td>
                 </tr>
                 <tr>
-                    <td colspan="5%">
-                        <span class="headerLeft">Email:</span>
-                    </td>
-                    <td colspan="95%">brad.lushman@uwaterloo.ca</td>
+                    <th colspan="5%">Email:</th>
+                    <td colspan="95%"><a href = "mailto: brad.lushman@uwaterloo.ca" target = "_blank;">brad.lushman@uwaterloo.ca</a></td>
                 </tr>
                 <tr>
-                    <td colspan="5%">
-                        <span class="headerLeft">Website:</span>
-                    </td>
+                    <th colspan="5%">Website:</th>
                     <td colspan="95%">
                         <a href="https://www.student.cs.uwaterloo.ca/~cs246/" target="_blank;">https://www.student.cs.uwaterloo.ca/~cs246/</a>
                     </td>
                 </tr>
-                <br>
                 <tr>
-                    <td colspan="95%"><span class="headerLeft">Note:</span></td>
+                    <th colspan="5%">Note:</th>
                     <td>All program codes below are provided by Prof. Lushman in class.</td>
                 </tr>
             </table>
@@ -3101,11 +3096,11 @@
             </div>
             <hr> 
             
-            <table width="100%">
+            <table class="buttomTable">
                 <tr>
-                    <td width="45%"><a href="./cs246_3.html">&larr; Go to Module 3 - C++ (Part 2) and Introduction to OOP</a></td>
-                    <td width="10%" align="centre"><a href="./cs246.html">&uarr; Go to Index</a></td>
-                    <td width="45%"></td>
+                    <td class="buttomLeftTable"><a href="./cs246_3.html">&larr; Go to Module 3 - C++ (Part 2) and Introduction to OOP</a></td>
+                    <td class="buttomCentreTable"><a href="./cs246.html">&uarr; Go to Index</a></td>
+                    <td class="buttomRightTable"></td>
                 </tr>
             </table>
             <hr>
@@ -3125,7 +3120,7 @@
                     <i class="fa fa-github-square"></i>
                 </a>
                 <br>
-                <p>Chun Kit (Calvin) Li &copy; 2017</p>
+                <p>Chun Kit (Calvin) Li &copy; 2017 - 2018</p>
                 <br>
             </div>            
         </div>
