--- a/temp.html
+++ b/temp.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <title>Calvin Li</title>
         <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
         <!-- stylesheet found from w3school. (icon use)-->
         <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -38,7 +38,9 @@
                         <li class="courseNote">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Course Notes<span class="caret"></span></a>
                             <ul class="dropdown-menu">
+                                <li><a href="./cs230.html">CS 230</a></li>
                                 <li><a href="./cs246.html">CS 246</a></li>
+                                <li><a href="./econ101.html">ECON 101</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -69,7 +71,7 @@
                     <i class="fa fa-github-square"></i>
                 </a>
                 <br>
-                <p>Chun Kit (Calvin) Li &copy; 2017</p>
+                <p>Chun Kit (Calvin) Li &copy; 2017 - 2018</p>
                 <br>
             </div>
             
