--- a/cs230.html
+++ b/cs230.html
@@ -142,7 +142,7 @@
                     <br>
                     Lastly, we require inputer/output devices.<br>
                 </p>
-                <img src="./image/cs230/lec1/1_1.png" width="35%" height="35%">
+                <img src="./image/cs230/lec1/1_1.PNG" width="35%" height="35%">
                 <p>
                     Von Neumann Architecture is still the basis for almost all computers today.<br>
                     (Strict Von Neumann Architecture says that data and program must be stored on the same memory unit; this is not always the case Harvard Architecture.)<br>
@@ -216,7 +216,7 @@
                     <br>
                     We can "calculate" or rather compue the decimal value number by doing<br>
                 </p>
-                <img src="./image/cs230/lec1/1_2.png" width="7%" height="7%">
+                <img src="./image/cs230/lec1/1_2.PNG" width="7%" height="7%">
                 <br>
                 <p>
                     You can use any number for your base.<br>
