--- a/cs230.html
+++ b/cs230.html
@@ -43,7 +43,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="./cs230.html">CS 230</a></li>
                                 <li><a href="./cs246.html">CS 246</a></li>
-                                <li><a href="./cecon101.html">ECON 101</a></li>
+                                <li><a href="./econ101.html">ECON 101</a></li>
                             </ul>
                         </li>
                     </ul>
