--- a/econ101.html
+++ b/econ101.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Calvin Li</title>
+        <title>ECON101|Calvin Li</title>
         <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/note.css">
@@ -118,6 +118,139 @@
                     This is the 2% participation bonus.<br>
                     We will using the online tool Learning Catalytics for recording in-class participation.<br>
                     So bring your laptop every lecture!<br>
+                </p>
+            </div>
+            <hr>
+            <div class="lec2">
+                <h3>Lecture 2 - 05/01/2018</h3>
+                <hr>
+                <b>The Core Ideas Of Economics</b>
+                <p>
+                    All economic questions occur since <span class="key">we want more than we can get</span>.<br>
+                    For example, we want more time than we can have.<br>
+                    <br>
+                    <span class="key">Scarcity</span>: our inability to satisfy all our wants<br>
+                    <br>
+                    We must make <span class="key">choices</span> since we face scarcity.<br>
+                    The choices we make depend on the incentives we face.<br>
+                    <br>
+                    <span class="key">Incentive</span>: a reward that encourages an action or a penalty that discourages an action<br>
+                </p>
+                <br>
+                <b>Standard Definition of Economics</b>
+                <ul>
+                    <li>
+                        <span class="key">Economics</span>
+                        <ul>
+                            <li>
+                                the social science that studies the <span class="key">choices</span> that individuals, businesses, governments, and entire societies make as they cope with <span class="key">scarcity</span> and the <span class="key">incentives</span> that influence and reconcile those choice
+                            </li>
+                            <li>
+                                divides in to two main parts:
+                                <ul>
+                                    <li>Microeconomics</li>
+                                    <li>Macroeconomics</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="key">Microeconomics</span>
+                        <ul>
+                            <li>
+                                the study of choices that individuals and businesses make, the way those choices interact in markets, and the influence of governments
+                            </li>
+                            <li>
+                                Example: Why are people buying more e-books and fewer hard copy books?
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="key">Macroeconomics</span>
+                        <ul>
+                            <li>
+                                the study of the performance of the national and global economies
+                            </li>
+                            <li>
+                                Example: What caused the recession of 2008?
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <br>
+                <b>Two Big Economic Questions</b>
+                <ol>
+                    <li>
+                        How do choices end up determining <span class="key">what</span>, <span class="key">how</span>, and <span class="key">for whom</span> goods and services get produced?
+                    </li>
+                    <li>
+                        When do choices made in the pursuit of <span class="key">self-interest</span> also promote the <span class="key">social interest</span>?
+                    </li>
+                </ol>
+                <br>
+                <p>
+                    <span class="key">How?</span><br>
+                    Goods and services are produced by using productive resources that economists call <span class="key">factors of production</span>.<br> 
+                    <br>
+                    Factors of production are grouped into four categories:<br>
+                </p>
+                <ul>
+                    <li>
+                        <span class="key">Land</span>
+                        <ul>
+                            <li>the "gifts of nature" that we use to produce goods and services</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="key">Labour</span>
+                        <ul>
+                            <li>the work time and work effort that people devote to producing goods and services</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="key">Capital</span>
+                        <ul>
+                            <li>
+                                the tools, instruments, machines, buildings, and other constructions that businesses use to produce goods and services
+                            </li>
+                            <li>
+                                the knowledge and skill that people obtain from education, on-the-job training, and work experience are called <span class="key">human capital</span>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="key">Entrepreneurship</span>
+                        <ul>
+                            <li>the human resource that organizes land, labour and capital</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>
+                    Since capital includes most of the things, it may be easy to mess up with land.<br>
+                    For example, forest is a land but if we cut down the tree, the wood we get is a capital.<br>
+                    The oil beneath the Earth's surface is land, and if we recovered the oil, it is capital.<br>
+                    <br>
+                    Example: Your neighbour has a bakery<br>
+                </p>
+                <ul>
+                    <li>Land: power, raw materials for making bread (flour, salt, water...)</li>
+                    <li>Labour: the people who work in the bakery</li>
+                    <li>Capital: the bakery, bread maker</li>
+                    <li>Entrepreneurship: Your neighbour himself/herself</li>
+                </ul>
+                <br>
+                <p>
+                    <span class="key">For Whom?</span><br>
+                    Who gets the goods and services depends on the incomes that people earn.<br>
+                </p>
+                <ul>
+                    <li>Land earns <span class="key">rent</span>.</li>
+                    <li>Labour earns <span class="key">wages</span>.</li>
+                    <li>Capital earns <span class="key">interest</span>.</li>
+                    <li>Entrepreneurship earns <span class="key">profit</span>.</li>
+                </ul>
+                <p>
+                    Notice that interest is always with percentage, but rent, wages and profit are with money.<br>
                 </p>
             </div>
             <hr>
