--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Calvin Li - About</title>
+        <title>About|Calvin Li</title>
         <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
         <link rel="stylesheet" href="./css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
