--- a/cs246_1.html
+++ b/cs246_1.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Calvin Li</title>
+        <title>CS246|Calvin Li</title>
         <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/note.css">
