--- a/econ101.html
+++ b/econ101.html
@@ -236,7 +236,7 @@
                     <li>Land: power, raw materials for making bread (flour, salt, water...)</li>
                     <li>Labour: the people who work in the bakery</li>
                     <li>Capital: the bakery, bread maker</li>
-                    <li>Entrepreneurship: Your neighbour himself/herself</li>
+                    <li>Entrepreneurship: Your neighbour's skills at leading the bakery</li>
                 </ul>
                 <br>
                 <p>
